--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,3 @@
-beautifulsoup4==4.9.3
-bleach==3.3.0
-certifi==2020.12.5
-chardet==4.0.0
-click==8.0.1
-colorama==0.4.4
-docutils==0.16
-Flask==2.0.1
-idna==2.10
-importlib-metadata==3.7.2
-itsdangerous==2.0.1
-Jinja2==3.0.1
-keyring==23.0.0
-MarkupSafe==2.0.1
-packaging==20.9
-Pygments==2.8.1
-pyparsing==2.4.7
-pywin32-ctypes==0.2.0
-readme-renderer==29.0
-requests==2.25.1
-requests-toolbelt==0.9.1
-rfc3986==1.4.0
-six==1.15.0
-soupsieve==2.2.1
-tqdm==4.59.0
-twine==3.3.0
-urllib3==1.26.3
-webencodings==0.5.1
-Werkzeug==2.0.1
-wincertstore==0.2
-zipp==3.4.1
-gunicorn == 20.0.4
+bs4
+flask
+gunicorn
